# django-guestman

./: CHANGELOG.md  CONTRACTS.md  MANIFEST.in  README.md  __init__.py  admin.py  apps.py  exceptions.py  gates.py  pyproject.toml  service.py  utils.py
adapters/: __init__.py  doorman.py  omniman_orders.py
api/: __init__.py
contrib/admin_unfold/: __init__.py  admin.py  apps.py  base.py
contrib/analytics/: __init__.py
contrib/consent/: __init__.py  admin.py  apps.py  models.py  service.py
contrib/consent/migrations/: 0001_initial.py
contrib/customer_lookup/: __init__.py
contrib/identifiers/: __init__.py  admin.py  apps.py  models.py  service.py
contrib/identifiers/migrations/: 0001_initial.py  0002_alter_customeridentifier_options_and_more.py
contrib/insights/: __init__.py  admin.py  apps.py  models.py  service.py
contrib/insights/migrations/: 0001_initial.py  0002_alter_customerinsight_options_and_more.py
contrib/loyalty/: __init__.py  admin.py  apps.py  models.py  service.py
contrib/loyalty/migrations/: 0001_initial.py
contrib/manychat/: __init__.py  apps.py  service.py  views.py
contrib/preferences/: __init__.py  admin.py  apps.py  models.py  service.py
contrib/preferences/migrations/: 0001_initial.py  0002_alter_customerpreference_options_and_more.py
contrib/timeline/: __init__.py  admin.py  apps.py  service.py
contrib/timeline/migrations/: 0001_initial.py
docs/concepts/: crm-contribs.md  source-of-truth.md
management/commands/: guestman_cleanup.py
migrations/: 0001_initial.py  0002_contactpoint_externalidentity.py  0003_rename_guestman_co_custome_a1b2c3_idx_guestman_co_custome_4e8796_idx_and_more.py  0004_alter_contactpoint_options_alter_customer_options_and_more.py  0005_alter_processedevent_options_and_more.py  0006_alter_customer_email_alter_customer_phone.py
models/: __init__.py  address.py  contact_point.py  customer.py  external_identity.py  group.py  processed_event.py
protocols/: __init__.py  customer.py  orders.py
services/: __init__.py  address.py  customer.py
signals/: __init__.py
tests/: conftest.py  settings.py  test_crm_features.py  test_hardening.py  test_manychat.py  test_models.py  test_services.py
